fixed a typo in earth-day-and-the-catholic-church article

--- a/earth-day-and-the-catholic-church.mdx
+++ b/earth-day-and-the-catholic-church.mdx
@@ -12,7 +12,7 @@ lat_lng: [43.7844, -88.7879]
 news_category: "Our Planet Earth Article"
 ---
 
-###### <sub>Gaylord Nelson received the Presidential Freedom Award from President Bill Clinton in 1995.<sub>
+###### <sub>Gaylord Nelson received the Presidential Freedom Award from President Bill Clinton in 1995.</sub>
 
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed. M.S.
 
