fixed some more typos in the mdx files.

--- a/righting-wrongs-through-legislation.mdx
+++ b/righting-wrongs-through-legislation.mdx
@@ -11,7 +11,7 @@ lat_lng: [45.5019, -73.5674]
 news_category: "Our Planet Earth Article"
 ---
 
-###### <sub>Americans once used DDT with abandon, as on this Long Island, New York, beach, ca. 1945. (Pictorial Press Ltd/Alamy Stock Photo)<sub>
+###### <sub>Americans once used DDT with abandon, as on this Long Island, New York, beach, ca. 1945. (Pictorial Press Ltd/Alamy Stock Photo)</sub>
 
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed. M.S.
 
