fixed the sub and sup tag in saving-the-american-chestnut-tree article

--- a/saving-the-american-chestnut-tree.mdx
+++ b/saving-the-american-chestnut-tree.mdx
@@ -9,9 +9,16 @@ lat_lng: [35.9940, -78.8986]
 news_category: "Our Planet Earth Article"
 ---
 
-<sub><sup>Photo courtesy of the Forest History Society, Durham, N.C., circa 1909/1910</sub></sup>
-<br/>
-<small>Also, can find picture in [Alliance for the Chesapeake Bay Article](https://www.allianceforthebay.org/2018/10/american-chestnut-ghosts-of-our-eastern-forests/)</small>
+<sub>
+  <sup>
+    Photo courtesy of the Forest History Society, Durham, N.C., circa 1909/1910
+  </sup>
+</sub>
+<br />
+<small>
+  Also, can find picture in [Alliance for the Chesapeake Bay
+  Article](https://www.allianceforthebay.org/2018/10/american-chestnut-ghosts-of-our-eastern-forests/)
+</small>
 
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed. M.S.
 
@@ -45,7 +52,15 @@ Chestnut: An All-Out Effort to Save this Iconic Species](https://joegardener.com
 methods](https://tacf.org/science-strategies/3bur/) to create “a disease tolerant and genetically diverse population of American chestnut trees that will be
 adaptable to broad and changing climates.” Please watch their trailer below and become a member.
 
-<iframe width="800" height="500" src="https://www.youtube.com/embed/-HADqJgYMJ0?si=ostyo-UpxWjyFBnB&amp;start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe
+  width="800"
+  height="500"
+  src="https://www.youtube.com/embed/-HADqJgYMJ0?si=ostyo-UpxWjyFBnB&amp;start=1"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  allowfullscreen
+></iframe>
 
 Methods for rescuing the American Chestnut include:
 
