--- a/a-team-effort-of-love.mdx
+++ b/a-team-effort-of-love.mdx
@@ -1,14 +1,13 @@
 ---
 title: "A Team Effort of Love"
 date: "2020-12-18"
-excerpt: "
-Did you know that in 1970, President Richard Nixon signed the National Environmental Policy
+excerpt: "Did you know that in 1970, President Richard Nixon signed the National Environmental Policy
 Act, which required some federal agencies to take part in certain regulations, policies, projects,
 licensing, and permitting? The NEPA has been a blessing for 50 years because it requires
 projects to realize their impacts on the environment, and be held accountable. It was developed
 to avoid, minimize, and mitigate/lessen our impacts upon Earth’s air, water and soil."
-category: "Ecological-Education"
-cover_image: "/images/posts/A Team Effort of Love.jpg"
+categories: ["Ecological-Education"]
+cover_image: "./images/a-team-effort-of-love.jpg"
 lat_lng: [38.9072, -77.0369 ]
 news_category: "Our Planet Earth Article"
 ---
