--- a/bees-butterflies-and-earthworms.mdx
+++ b/bees-butterflies-and-earthworms.mdx
@@ -4,10 +4,10 @@ date: "2022-01-28"
 excerpt: "In 1963, Peter, Paul and Mary (an American folk group) released their version of the Bob Dylan
 song “Blowin’ in the Wind.” In it, they sing, “Where have all the flowers gone?” Today, these
 lyrics could easily become, “Where have all the bees, butterflies and earthworms gone?” These
-animals may be considered sentinel species used to detect risks to humans, very much like a
+animals may be considered sentinel species used to detect risks to humans, very much like a
 canary sent into a coal mine. If it died, that was an early warning."
-category: "Ecological-Education"
-cover_image: "/images/posts/Bees, butterflies and earthworms.jpg"
+categories: ["Ecological-Education"]
+cover_image: "./images/bees-butterflies-and-earthworms.jpg"
 lat_lng: [19.4326, -99.1332 ]
 news_category: "Our Planet Earth Article"
 ---
