--- a/biodiversity.mdx
+++ b/biodiversity.mdx
@@ -7,8 +7,8 @@ species. Did you know the main driver in the loss of biodiversity remains in hum
 production with humans altering over 70% of all ice-free land? When land is converted for agriculture or
 development, animals and plants lose their habitat. We, as stewards and ambassadors of planet Earth, need to avoid
 destroying natural habitats."
-category: "Community-Involvement"
-cover_image: "/images/posts/Biodiversity.jpg"
+categories: ["Community-Involvement"]
+cover_image: "./images/biodiversity.jpg"
 lat_lng: [3.4653, -62.2159]
 news_category: "Our Planet Earth Article"
 ---
@@ -66,7 +66,15 @@ growth needs. Avoiding and minimizing impacts to environmentally sensitive habit
 should not resort to urban sprawl. Conversely, they should use existing disturbed habitats, and avoid, minimize,
 or mitigate impacts.
 
-<iframe width="800" height="500" src="https://www.youtube.com/embed/XAju0353w9I?si=H6hUQI2eNMYBCXJe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe
+  width="800"
+  height="500"
+  src="https://www.youtube.com/embed/XAju0353w9I?si=H6hUQI2eNMYBCXJe"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  allowfullscreen
+></iframe>
 
 Quote:
 
