--- a/good-news-about-pope-francis-laudato-si.mdx
+++ b/good-news-about-pope-francis-laudato-si.mdx
@@ -5,8 +5,8 @@ excerpt: "“On Sept. 5, 2021, more than 200 medical journals released an unprec
 urged world leaders to act. The science is unequivocal, they write. A global increase of 1.5⁰ C
 above the pre-industrial average and the continued loss of biodiversity risk catastrophic harm to
 health” (Amy McKeever, National Geographic, 9/9/21)."
-category: "Community-Involvement"
-cover_image: "/images/posts/Good news about Pope Francis’ ‘Laudato Si’’.jpg"
+categories: ["Community-Involvement"]
+cover_image: "./images/good-news-about-pope-francis-laudato-si.jpg"
 lat_lng: [55.8714, -4.2546]
 news_category: "Our Planet Earth Article"
 ---
