--- a/how-do-droughts-affect-people.mdx
+++ b/how-do-droughts-affect-people.mdx
@@ -8,8 +8,8 @@ hunger, malnutrition and disease, huge displacements of people, and shattered ec
 USA for United Nations High Commissioner for Refugees , more than 4.2 million people have been displaced
 across the region; 3.7 million people have been internally displaced; and more than 10 million children are in
 need of humanitarian assistance. Climate change could bring about even more consequences."
-category: "Cry-of-the-Poor"
-cover_image: "/images/posts/How-Do-Droughts-Affect-People.jpg"
+categories: ["Cry-of-the-Poor"]
+cover_image: "./images/how-do-droughts-affect-people.jpg"
 lat_lng: [19.0643, 13.5437]
 news_category: "Our Planet Earth Article"
 ---
@@ -60,7 +60,15 @@ greatly in controlling erosion and keeping chemicals and sediments from entering
 A [two-stage ditch helps keep water clear and limits the input of farm chemicals](https://www.indianawatershedinitiative.com/uploads/8/0/9/5/80953414/davis_et_al_2015.pdf). Such ditches have benches that are [planted with grasses that significantly absorb or reduce phosphorus concentrations and reduce turbidity](https://www.indianawatershedinitiative.com/uploads/8/0/9/5/80953414/mahl_et_al_2015.pdf). Nitrogen removal was also increased especially when benches were flooded. These two-stage ditches act similar to
 a constructed wetland for wastewater treatment.
 
-<iframe width="800" height="500" src="https://www.youtube.com/embed/jyYIqR5jCls?si=CVo--V62cKfPgxfU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe
+  width="800"
+  height="500"
+  src="https://www.youtube.com/embed/jyYIqR5jCls?si=CVo--V62cKfPgxfU"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  allowfullscreen
+></iframe>
 
 Quote:
 
