--- a/living-smart.mdx
+++ b/living-smart.mdx
@@ -6,8 +6,8 @@ Throughout the country, Americans are now experiencing firsthand, the effects of
 this issue, the Inflation Reduction Act was signed into law by President Joe Biden on August 16, 2022. The
 National Aeronautics and Space Administrator Bill Nelson says, “The science is clear. We must act now to
 protect our communities and planet; it’s the only one we have.”"
-category: "Simple-Lifestyles"
-cover_image: "/images/posts/Living-Smart.jpg"
+categories: ["Simple-Lifestyles"]
+cover_image: "./images/living-smart.jpg"
 lat_lng: [60.1282, 18.6435 ]
 news_category: "Our Planet Earth Article"
 ---
@@ -62,7 +62,15 @@ with trees to keep cool in summer, and warm in winter. Also, consider using ener
 advantage of the aspect of your home, where generally the south-facing side is hotter than north-facing, and
 west-facing is warmer than east-facing. Living smart is very important.
 
-<iframe width="800" height="500" src="https://www.youtube.com/embed/0k2-SzlDGko?si=vg36II19V9e8bL1r" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe
+  width="800"
+  height="500"
+  src="https://www.youtube.com/embed/0k2-SzlDGko?si=vg36II19V9e8bL1r"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  allowfullscreen
+></iframe>
 
 > Quote:
 > “Learn from yesterday, live for today, hope for tomorrow. The important thing is not to stop questioning” <br/>
