--- a/pope-francis-calls-us-to-action-on-ecological-issues.mdx
+++ b/pope-francis-calls-us-to-action-on-ecological-issues.mdx
@@ -7,8 +7,8 @@ On Care for our Common Home?” Five years later, he announced an Anniversary Ye
 May 24, 2020, to May 24, 2021, where he encourages a new way of living. During this
 Anniversary Year, Pope Francis established seven public commitment groups and seven platform
 goals."
-category: "Cry-of-the-Poor"
-cover_image: "/images/posts/Pope Francis calls us to action on ecological issues.jpg"
+categories: ["Cry-of-the-Poor"]
+cover_image: "./images/pope-francis-calls-us-to-action-on-ecological-issues.jpg"
 lat_lng: [41.9028, 12.4964]
 news_category: "Our Planet Earth Article"
 ---
