--- a/righting-wrongs-through-legislation.mdx
+++ b/righting-wrongs-through-legislation.mdx
@@ -5,8 +5,8 @@ excerpt: "
 Historically, we’ve learned much about righting wrongs to promote environmental protection. Two notable
 authors are Aldo Leopold (“A Sand County Almanac”) and Rachel Carson (“Silent Spring”). Both were helpful
 in passing legislation like:"
-category: "Ecological-Education"
-cover_image: "/images/posts/Righting Wrongs Through Legislation.jpg"
+categories: ["Ecological-Education"]
+cover_image: "./images/righting-wrongs-through-legislation.jpg"
 lat_lng: [45.5019, -73.5674]
 news_category: "Our Planet Earth Article"
 ---
