--- a/spirituality.mdx
+++ b/spirituality.mdx
@@ -6,8 +6,8 @@ yourself, something more to being human than a sensory experience? Dr. Maya Spen
 of Psychiatrists goes on to say, “Our lives have significance in a context beyond a mundane everyday existence
 at the level of biological needs, and knowing that we are a significant part of a purposeful unfolding of life in
 our universe.”"
-category: "Ecological-Spirituality"
-cover_image: "/images/posts/Spirituality.jpg"
+categories: ["Ecological-Spirituality"]
+cover_image: "./images/spirituality.jpg"
 lat_lng: [3.4653, 62.2159]
 news_category: "Our Planet Earth Article"
 ---
@@ -61,7 +61,15 @@ tell them how we feel about issues. One way is to support the FOREST Act of 2023
 acknowledging Senator Mike Braun and Senator Brian Schatz for cosponsoring it, and contacting the World
 Wildlife Fund (lauren.gleason@wwfus.org) or Environmental Investigation Agency U.S. (dstilley@eia-global.org) for more information. Reach out to them respectfully!
 
-<iframe width="800" height="500" src="https://www.youtube.com/embed/6Yk1pGlOGzw?si=9hxnicnN7Le0n43k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe
+  width="800"
+  height="500"
+  src="https://www.youtube.com/embed/6Yk1pGlOGzw?si=9hxnicnN7Le0n43k"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  allowfullscreen
+></iframe>
 
 Quote:
 
