--- a/united-states-conference-of-catholic-bishops-address-care-for-creation.mdx
+++ b/united-states-conference-of-catholic-bishops-address-care-for-creation.mdx
@@ -11,8 +11,8 @@ express their concerns and opinions on upcoming legislation. Such investments ar
 meet the Paris Agreement goals to reduce carbon emissions by 50% by 2030. Jose Aguto,
 Executive Director of Catholic Climate Covenant says, “such actions will be a civilizational
 game-changer.”"
-category: "Ecological-Spirituality"
-cover_image: "/images/posts/United States Conference of Catholic Bishops Address Care for Creation.jpg"
+categories: ["Ecological-Spirituality"]
+cover_image: "./images/united-states-conference-of-catholic-bishops-address-care-for-creation.jpg"
 lat_lng: [32.7157, -117.1611]
 news_category: "Our Planet Earth Article"
 ---
