Added CustomImage Tag to Article to display Image

--- a/wetlands-clean-air-and-water-and-save-soil.mdx
+++ b/wetlands-clean-air-and-water-and-save-soil.mdx
@@ -12,6 +12,12 @@ lat_lng: [40.5512, -85.6024]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://github.com/MCervone14/our-planet-earth-articles/tree/main/images/wetlands-clean-air-and-water-and-save-soil.jpg"
+  alt="Wetlands with a sunset"
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed.M.S.
 
 **Our Planet Earth**
