Added new src to CustomImage tag to fix image issue

--- a/wetlands-clean-air-and-water-and-save-soil.mdx
+++ b/wetlands-clean-air-and-water-and-save-soil.mdx
@@ -13,7 +13,7 @@ news_category: "Our Planet Earth Article"
 ---
 
 <CustomImage
-  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/tree/main/images/wetlands-clean-air-and-water-and-save-soil.jpg"
+  src="https://github.com/MCervone14/our-planet-earth-articles/blob/main/images/wetlands-clean-air-and-water-and-save-soil.jpg"
   alt="Wetlands with a sunset"
   priority={true}
 />
